Alteração na Forma de Pagamento

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
     <p>Assim preparo um orçamento especial com todo carinho 💕</p>
     <p class="pagamento">
-      💳 Pagamento via <strong>Pix</strong>.<br>
+      💳 Pagamento via <strong>Pix</strong> ou <strong>Cartão de Crédito</strong>.<br>
       Após a confirmação, sua encomenda é reservada.
     </p>
   </div>
